# VisualFlox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: export_resources.cmake
res/: CMakeLists.txt
res/Shaders/: boid.fragment  boid.vertex  default.frag  default.fragment  default.vert  default.vertex
src/: CMakeLists.txt
src/app/: Application.cpp  CMakeLists.txt  pch.hpp
src/app/Boid/: Boid.cpp  Boid.hpp  Flock.cpp  Flock.hpp  quaternions.md
src/app/Boid/Algorithm/: Algorithm.hpp  DirectLoopAlgorithm.cpp  DirectLoopAlgorithm.hpp
src/app/Core/Window/: Details.cpp  Window.cpp  Window.hpp
src/app/Math/: Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Fixed.hpp  Math.cpp  Math.hpp  Rectangle.cpp  Rectangle.hpp
src/app/Rendering/: BoundRenderer.cpp  BoundRenderer.hpp  FlockRenderer.cpp  FlockRenderer.hpp  Resources.md
src/lwvl/include/lwvl/: lwvl.hpp
src/lwvl/src/: Debug.cpp  VertexArray.cpp
